kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kube-system
spec:
  tls:
    - hosts:
        - k8swebsite.local
      secretName: my-tls-secret
  rules:
    - host: k8swebsite.local
      http:
        paths:
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
